# motiondb

./: .coderabbit.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  test_multi_db.sql
crates/motion-bench/: Cargo.toml
crates/motion-bench/benches/: database.rs  sql.rs  storage.rs
crates/motion-bench/src/: lib.rs
crates/motion-buffer/: Cargo.toml
crates/motion-buffer/src/: lib.rs
crates/motion-cache/: Cargo.toml
crates/motion-cache/benches/: cache_bench.rs
crates/motion-cache/src/: arc.rs  bloom.rs  lib.rs  lru.rs  lru_k.rs  plan_cache.rs  result_cache.rs
crates/motion-cli/: Cargo.toml
crates/motion-cli/src/: commands.rs  config.rs  formatter.rs  main.rs  repl.rs
crates/motion-client/: Cargo.toml
crates/motion-client/src/: lib.rs
crates/motion-client/src/client/: mod.rs
crates/motion-client/src/pool/: mod.rs
crates/motion-client/src/transaction/: mod.rs
crates/motion-common/: Cargo.toml
crates/motion-common/src/: constants.rs  lib.rs
crates/motion-common/src/config/: database.rs  mod.rs
crates/motion-common/src/error/: database.rs  mod.rs
crates/motion-common/src/memory/: aligned.rs  arena.rs  mod.rs  numa.rs  pool.rs  simd.rs
crates/motion-common/src/types/: ids.rs  keys.rs  mod.rs  timestamps.rs
crates/motion-hnsw/: Cargo.toml
crates/motion-hnsw/src/: lib.rs
crates/motion-kv/: Cargo.toml
crates/motion-kv/src/: engine.rs  lib.rs  wal.rs
crates/motion-kv/src/manifest/: mod.rs
crates/motion-kv/src/sstable/: footer.rs  writer.rs
crates/motion-mvcc/: Cargo.toml
crates/motion-mvcc/src/: lib.rs
crates/motion-mvcc/src/gc/: mod.rs
crates/motion-mvcc/src/snapshot/: mod.rs
crates/motion-mvcc/src/version/: mod.rs
crates/motion-proto/: Cargo.toml  build.rs
crates/motion-proto/proto/: motion.proto
crates/motion-proto/src/: lib.rs
crates/motion-query/: Cargo.toml
crates/motion-query/src/: lib.rs
crates/motion-raft/: Cargo.toml
crates/motion-raft/src/: lib.rs
crates/motion-raft/src/lease/: mod.rs
crates/motion-raft/src/membership/: mod.rs
crates/motion-raft/src/state_machine/: mod.rs
crates/motion-raft/src/transport/: mod.rs
crates/motion-security/: Cargo.toml
crates/motion-security/src/: lib.rs
crates/motion-server/: Cargo.toml
crates/motion-server/src/: lib.rs  mysql_handler.rs  pgwire_handler.rs
crates/motion-server/src/config/: mod.rs
crates/motion-server/src/database/: engine.rs  error.rs  mod.rs  raft_sm.rs  result.rs  session.rs  vector_index.rs
crates/motion-server/src/grpc/: mod.rs
crates/motion-sql/: Cargo.toml
crates/motion-sql/src/: lib.rs
crates/motion-sql/src/executor/: evaluator.rs  mod.rs
crates/motion-sql/src/optimizer/: mod.rs
crates/motion-sql/src/parser/: mod.rs  statement.rs  types.rs
crates/motion-sql/src/physical/: mod.rs
crates/motion-sql/src/storage/: encoder.rs  engine.rs  error.rs  hybrid.rs  table.rs
crates/motion-storage/: Cargo.toml
crates/motion-storage/src/: lib.rs
crates/motion-storage/src/buffer/: config.rs  error.rs  eviction.rs  frame.rs  latch.rs  mod.rs  pool.rs
crates/motion-storage/src/file/: handle.rs  mod.rs  options.rs
crates/motion-storage/src/page/: checksum.rs  header.rs  mod.rs  slotted.rs  types.rs
crates/motion-storage/src/sagetree/: config.rs  cursor.rs  delta.rs  error.rs  mod.rs  node.rs  pager.rs  tree.rs
crates/motion-test/: Cargo.toml
crates/motion-test/src/: lib.rs
crates/motion-test/tests/: e2e_integration.rs  grpc_integration.rs
crates/motion-txn/: Cargo.toml
crates/motion-txn/src/: lib.rs
crates/motion-txn/src/deadlock/: mod.rs
crates/motion-txn/src/lock/: mod.rs
crates/motion-txn/src/manager/: mod.rs
crates/motion-wal/: Cargo.toml
crates/motion-wal/src/: config.rs  error.rs  lib.rs  reader.rs  segment.rs  wal.rs  writer.rs
crates/motion-wal/src/checkpoint/: mod.rs
crates/motion-wal/src/group_commit/: mod.rs
crates/motion-wal/src/record/: header.rs  payload.rs  types.rs
