[workspace]
resolver = "2"
members = [
    "crates/motion-common",
    "crates/motion-storage",
    "crates/motion-buffer",
    "crates/motion-wal",
    "crates/motion-txn",
    "crates/motion-mvcc",
    "crates/motion-raft",
    "crates/motion-query",
    "crates/motion-sql",
    "crates/motion-proto",
    "crates/motion-server",
    "crates/motion-client",
    "crates/motion-cli",
    "crates/motion-test",
    "crates/motion-bench",
    "crates/motion-cache",
    "crates/motion-kv",
    "crates/motion-security",
    "crates/motion-hnsw",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MotionDB Team <saikiranreddy2710@github.com>"]
license = "MIT"
repository = "https://github.com/saikiranreddy2710/motiondb"
keywords = ["database", "newsql", "distributed", "storage-engine"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Internal crates
motion-common = { path = "crates/motion-common" }
motion-storage = { path = "crates/motion-storage" }
motion-buffer = { path = "crates/motion-buffer" }
motion-wal = { path = "crates/motion-wal" }
motion-txn = { path = "crates/motion-txn" }
motion-mvcc = { path = "crates/motion-mvcc" }
motion-raft = { path = "crates/motion-raft" }
motion-query = { path = "crates/motion-query" }
motion-sql = { path = "crates/motion-sql" }
motion-server = { path = "crates/motion-server" }
motion-client = { path = "crates/motion-client" }
motion-proto = { path = "crates/motion-proto" }
motion-cache = { path = "crates/motion-cache" }
motion-kv = { path = "crates/motion-kv" }
motion-hnsw = { path = "crates/motion-hnsw" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Bytes and memory
bytes = { version = "1.11", features = ["serde"] }
memmap2 = "0.9"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random and time
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Networking (for later phases)
tonic = { version = "0.10", features = ["tls"] }
tonic-build = "0.10"
prost = "0.12"
futures-core = "0.3"
futures-util = "0.3"

# Testing
criterion = "0.5"
tempfile = "3.10"
proptest = "1.4"

# CRC for checksums
crc32fast = "1.3"

# Bitflags
bitflags = "2.4"

# SQL parsing
sqlparser = "0.43"

# Apache Arrow for vectorized execution
arrow = { version = "50.0", features = ["prettyprint"] }

# io_uring for Linux
io-uring = "0.6"

# libc for low-level system calls
libc = "0.2"

# Metrics
metrics = "0.22"

# PostgreSQL wire protocol
pgwire = { version = "0.25", default-features = true }
async-trait = "0.1"
futures = "0.3"

# MySQL wire protocol
opensrv-mysql = "0.7"

# CLI tools
clap = { version = "4.4", features = ["derive", "env"] }
rustyline = "13.0"
comfy-table = "7.1"
dirs = "5.0"
rpassword = "7.3"
atty = "0.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"
