[package]
name = "motion-mvcc"
description = "Multi-version concurrency control for MotionDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
motion-common = { workspace = true }
parking_lot = { workspace = true }
crossbeam-epoch = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
